--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ fastapi = "^0.115.5"
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
 tortoise-orm = {extras = ["asyncpg"], version = "^0.21.7"}
 python-dotenv = "^1.0.1"
+pydantic = "^2.10.0"
 
 
 [build-system]
