--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ uvicorn = {extras = ["standard"], version = "^0.32.0"}
 tortoise-orm = {extras = ["asyncpg"], version = "^0.21.7"}
 python-dotenv = "^1.0.1"
 pydantic = "^2.10.0"
+firebase-admin = "^6.6.0"
 
 
 [build-system]
